--- a/Labs/lab03.Rmd
+++ b/Labs/lab03.Rmd
@@ -46,14 +46,14 @@ my_simple_ols = function(x, y){
   y_bar = sum(y)/n
   x_bar = sum(x)/n
   
-  s_y = sqrt((sum(y-y_bar)^2)/(n-1))
-  s_x = sqrt((sum(x-x_bar)^2)/(n-1))
-  s_xy = sum((x-x_bar)*(y-y_bar))/(n)
+  s_y = sqrt(sum((y-y_bar)^2)/(n-1))
+  s_x = sqrt(sum((x-x_bar)^2)/(n-1))
+  s_xy = sum((x-x_bar)*(y-y_bar))/(n-1)
   r = s_xy/(s_x*s_y)
   
   b_1 = r*(s_y/s_x)
   b_0 = y_bar - (b_1*x_bar)
-  
+
   yhat = b_0+(b_1*x)
   
   e = y-yhat
@@ -85,13 +85,14 @@ Verify your computations are correct for the vectors `x` and `y` from the first 
 lm_mod = lm(y~x)
 my_simple_ols_mod = my_simple_ols(x,y)
 lm_mod
-my_simple_ols_mod
+my_simple_ols_mod$b_0
+my_simple_ols_mod$b_1
 
 pacman::p_load(testthat)
 expect_equal(my_simple_ols_mod$b_0, as.numeric(coef(lm_mod)[1]), tol = 1e-4)
 expect_equal(my_simple_ols_mod$b_1, as.numeric(coef(lm_mod)[2]), tol = 1e-4)
-expect_equal(my_simple_ols_mod$RMSE, summary(lm_mod)$sigma, tol = 1e-4)
-expect_equal(my_simple_ols_mod$Rsq, summary(lm_mod)$r.squared, tol = 1e-4)
+expect_equal(my_simple_ols_mod$rmse, summary(lm_mod)$sigma, tol = 1e-4)
+expect_equal(my_simple_ols_mod$r_square, summary(lm_mod)$r.squared, tol = 1e-4)
 
 ```
 
@@ -110,7 +111,8 @@ Create the $X$ matrix for this data example. Make sure it has the correct dimens
 Use the `model.matrix` function to compute the matrix `X` and verify it is the same as your manual construction.
 
 ```{r}
-#TO-DO
+model.matrix(~x)
+?model.matrix
 ```
 
 Create a prediction method `g` that takes in a vector `x_star` and `my_simple_ols_obj`, an object of type `my_simple_ols_obj` and predicts y values for each entry in `x_star`. 
@@ -179,7 +181,6 @@ Find the average height (include both parents and children in this computation).
 ```{r}
 y = c(Galton$parent, Galton$child)
 y_bar = sum(y)/(2*nrow(Galton))
-y_bar
 ```
 
 If you were predicting child height from parent and you were using the null model, what would the RMSE be of this model be?
@@ -187,6 +188,7 @@ If you were predicting child height from parent and you were using the null mode
 ```{r}
 sse0 = sum((y-y_bar)^2)
 rmse0 = sqrt(sse0/(2*nrow(Galton)-2))
+rmse0
 ```
 
 Note that in Math 241 you learned that the sample average is an estimate of the "mean", the population expected value of height. We will call the average the "mean" going forward since it is probably correct to the nearest tenth of an inch with this amount of data.
@@ -194,7 +196,7 @@ Note that in Math 241 you learned that the sample average is an estimate of the 
 Run a linear model attempting to explain the childrens' height using the parents' height. Use `lm` and use the R formula notation. Compute and report b_0, b_1, RMSE and R^2. 
 
 ```{r}
-galtonModel = my_simple_ols(Galton$parent, Galton$child)
+galtonModel = lm(Galton$child~Galton$parent)
 ```
 
 Interpret all four quantities: b_0, b_1, RMSE and R^2. Use the correct units of these metrics in your answer.
@@ -220,7 +222,7 @@ pacman::p_load(ggplot2)
 ggplot(Galton, aes(x = parent, y = child)) + 
   geom_point() + 
   geom_jitter() +
-  geom_abline(intercept = galtonModel$b_0, slope = galtonModel$b_1, color = "blue", size = 1) +
+  geom_abline(intercept = galtonModel$coefficients[1], slope = galtonModel$coefficients[2], color = "blue", size = 1) +
   geom_abline(intercept = 0, slope = 1, color = "red", size = 1) +
   geom_abline(intercept = y_bar, slope = 0, color = "darkgreen", size = 1) +
   xlim(63.5, 72.5) + 
