--- a/Labs/midterm1review.Rmd
+++ b/Labs/midterm1review.Rmd
@@ -32,6 +32,7 @@ orthogonal_projection(c(1, 2, 3, 4), c(0, 2, 0, -1))
 #prediction:
 result = orthogonal_projection(c(2, 6, 7, 3), c(1, 3, 5, 7))
 t(result$a_parallel) %*% result$a_perpendicular
+
 #prediction:
 result$a_parallel + result$a_perpendicular
 #prediction:
@@ -44,13 +45,21 @@ result$a_parallel / c(1, 3, 5 ,7)
 Create a vector y by simulating n = 100 standard iid normals. Create a matrix of size 100 x 2 and populate the first column by all ones (for the intercept) and the second column by 100 standard iid normals. Find the R^2 of an OLS regression of `y ~ X`. Use matrix algebra.
 
 ```{r}
-#No matric algebra way
+#No matrix algebra way
 set.seed(342)
 n=100
 X = cbind(1,rnorm(n))
 y = rnorm(n)
 mod = lm(y~0+X)
+summary(mod)$r.squared
 #Matrix algebra way
+y_hat = (X[,2]%*%solve((t(X[,2])%*%X[,2]))%*%t(X[,2]))%*%y
+y_bar = mean(y)
+SSR = sum((y_hat-y_bar)^2)
+SST = sum((y-y_bar)^2)
+
+r_square = SSR/SST
+r_square
 ```
 
 Write a for loop to each time bind a new column of 100 standard iid normals to the matrix X and find the R^2 each time until the number of columns is 100. Create a vector to save all R^2's. What happened??
@@ -65,7 +74,10 @@ for(j in 3:n){
 }
 plot(1:n,r_squares)
 #Better way is to do Gram Shcmidt with each new column
+
 ```
+
+
 ```{r}
 acos(t(y)%*%X[,47]/sqrt(sum(y^2)*sum(X[,47]^2))) * (180/pi)
 acos(t(y)%*%X[,48]/sqrt(sum(y^2)*sum(X[,48]^2))) * (180/pi)
@@ -88,7 +100,7 @@ summary(mod)$r.squared
 
 Why does this make sense?
 
-#TO-DO
+This makes sense since we know have more columns than observations.  We are overfit and so our explained variance will be 1.
 
 Let's use the Boston Housing Data for the following exercises
 
