--- a/Labs/lab05.Rmd
+++ b/Labs/lab05.Rmd
@@ -18,12 +18,13 @@ skimr::skim(diamonds)
 
 Given the information above, what are the number of columns in the raw X matrix?
 
-#TO-DO
+There are 10 columns in the raw X matrix. This can be confirmed by using ncol(MATRIX) or by viewing the summary above.
 
 Verify this using code:
 
 ```{r}
-#TO-DO
+ncol(diamonds)
+#diamonds
 ```
 
 Would it make sense to use polynomial expansions for the variables cut, color and clarity? Why or why not?
@@ -37,56 +38,80 @@ Would it make sense to use log transformations for the variables cut, color and 
 In order to ensure there is no time trend in the data, randomize the order of the diamond observations in D:.
 
 ```{r}
-#TO-DO
+length = dim(diamonds)[1]
+randObservations = sample(nrow(diamonds), length)
+diamonds = diamonds[randObservations,]
+diamonds
 ```
 
 Let's also concentrate only on diamonds with <= 2 carats to avoid the issue we saw with the maximum. So subset the dataset. Create a variable n equal to the number of remaining rows as this will be useful for later. Then plot it.
 
 ```{r}
-#TO-DO
-ggplot(diamonds, aes(x = carat, y = price)) + 
+caratSubset = diamonds[which(diamonds$carat<=2),]
+n = nrow(diamonds) - nrow(caratSubset)
+#max(caratSubset$carat) # Check the max carat size to ensure we are selecting right thing
+ggplot(caratSubset, aes(x = carat, y = price)) + 
   geom_point()
+
 ```
 
 Create a linear model of price ~ carat and gauge its in-sample performance using s_e.
 
 ```{r}
-#TO-DO
+x = caratSubset$carat
+y = caratSubset$price
+pricePerCarat = lm(y~x)
+standardError = sd(pricePerCarat$residuals)
+standardError
 ```
 
 Create a model of price ~ clarity and gauge its in-sample performance
 
 ```{r}
-#TO-DO
+x = caratSubset$clarity
+y = caratSubset$price
+priceClarity = lm(y~x)
+standardError = sd(priceClarity$residuals)
+standardError
 ```
 
 Why is the model price ~ carat substantially more accurate than price ~ clarity?
 
-#TO-DO
+The model price ~ carat is substantially more accurate because its simply a more "important" feature in our phenomena. Clarity is also a categorical variable, 
+which means fitting a line to this will most likely have more error than fitting to a continuous variable such as carat. (I believe its continous, or maybe very granular discrete I can't tell nor do I know that much about diamonds)
 
 Create a new transformed feature ln_carat and plot it vs price.
 
 ```{r}
-#TO-DO
+ln_carat = log(diamonds$carat)
 ggplot(diamonds, aes(x = ln_carat, y = price)) + 
   geom_point()
 ```
 
 Would price ~ ln_carat be a better fitting model than price ~ carat? Why or why not?
 
-#TO-DO
+It depends what sort of model we are fitting, if we are talking about a linear one then I would not use the log transformation. If we were using a second order polynomial then the log transformation would be a better option.
 
 Verify this by comparing R^2 and RMSE of the two models:
 
 ```{r}
-#TO-DO
+mod1 = lm(diamonds$price ~ diamonds$carat)
+mod2 = lm(diamonds$price ~ ln_carat)
+mod1RMSE = sqrt(mean(mod1$residuals^2))
+mod1R_SQ = summary(mod1)$r.squared
+mod2RMSE = sqrt(mean(mod2$residuals^2))
+mod2R_SQ = summary(mod2)$r.squared
+mod1RMSE
+mod1R_SQ
+mod2RMSE
+mod2R_SQ
 ```
 
 Create a new transformed feature ln_price and plot its estimated density:
 
 
 ```{r}
-#TO-DO
+ln_price = log(diamonds$price)
 ggplot(diamonds) + geom_histogram(aes(x = ln_price), binwidth = 0.01)
 ```
 
